add ldap backend support
Added on a separate file (ldap.yml) but i can change it to config.yml if you prefer
  But for me, it's more logic to have a dedicate file (when condition is define only once as exemple)

I added the more complex way for ldap guacamole, it's permit multiple ldap server and ALL ldap options are useable on both configuration side
  - for all backend via guacamole.properties.j2
  - for specific ldap server via ldap-servers.yml.j2

exemple how i use it :
```
guacamole_ldap:
  port: 636
  encryption_method: ssl
  user_base_dn: ou=People,dc=exemple,dc=com
  member_attribute: memberUid
  member_attribute_type: uid
  search_filter: (&(objectClass=inetOrgPerson)(specific_search=FALSE))
  group_base_dn: ou=Group,dc=exemple,dc=com
  group_search_filter: (objectClass=posixGroup)
  user_attributes: cn, givenName, sn, mail, telephoneNumber
  servers:
    - name: server1.domain.com
    - name: server2.domain.com
```

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,3 +22,7 @@
 
 - name: Manage Guacamole client configurations
   ansible.builtin.include_tasks: client.yml
+
+- name: Manage Guacamole LDAP authentication
+  ansible.builtin.include_tasks: ldap.yml
+  when: guacamole_ldap is defined
