add TOTP guacamole backend
* disabled by default

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,9 @@ guacamole_dl_url: "{{ 'http://apache.org/dyn/closer.cgi?action=download&filename
 
 guacamole_server_hostname: localhost
 
+# Authentication TOPT
+guacamole_auth_totp_package: "{{ 'guacamole-auth-totp-' + guacamole_version + '.tar.gz' }}"
+
 # Authentication OpenID
 guacamole_auth_openid_package: "{{ 'guacamole-auth-openid-' + guacamole_version + '.tar.gz' }}"
 
