--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,3 +22,7 @@
 
 - name: Manage Guacamole client configurations
   ansible.builtin.include_tasks: client.yml
+
+- name: Manage Guacamole TOTP configurations
+  ansible.builtin.include_tasks: totp.yml
+  when: guacamole_totp | default(false) | bool
