--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -246,3 +246,11 @@
     - "restart {{ guacamole_tomcat_service }}"
     - kill guacd
     - restart guacd
+
+- name: Update index.hmtl of ROOT in tomcat to redirect to guacamole webapps
+  ansible.builtin.copy:
+    content: "<meta http-equiv='Refresh' content=\"0; url='{{ guacamole_redirect }}'\"/>"
+    dest: "{{ '/var/lib/' + guacamole_tomcat + '/webapps/ROOT/index.html' }}"
+  when: guacamole_redirect is defined
+  become: true
+
