Add a new tasks to (optional) configure guacd daemon
Example how to set specific configuration to guacd :
```
guacd_config:
  daemon:
    pid_file: /var/run/guacd.pid
    log_level: debug
  server:
    bind_host: 127.0.0.1
    bind_port: 4822
```

or with ssl

```
guacd_config:
  daemon:
    pid_file: /var/run/guacd.pid
    log_level: debug
  server:
    bind_host: 127.0.0.1
    bind_port: 4822
  ssl:
    server_certificate: /etc/ssl/certs/guacd.crt
    server_key: /etc/ssl/private/guacd.key
```

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -12,6 +12,19 @@
     - /etc/guacamole/lib
     - /etc/guacamole/extensions
 
+- name: config | Configuring guacd
+  ansible.builtin.template:
+    src: etc/guacamole/guacd.conf.j2
+    dest: /etc/guacamole/guacd.conf
+    owner: "{{ guacamole_tomcat_user }}"
+    group: "{{ guacamole_tomcat_user }}"
+    mode: u=rw,g=r,o=r
+  become: true
+  notify:
+    - kill guacd
+    - restart guacd
+  when: guacd_config is defined
+
 - name: config | Configuring guacamole.properties
   ansible.builtin.template:
     src: etc/guacamole/guacamole.properties.j2
