--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ molecule = {extras = ["docker"], version = "^4.0.3"}
 flake8 = "^6.0.0"
 cookiecutter = "^2.1.1"
 pre-commit = "^2.20.0"
+pyyaml = "^6.0.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
