add libwebsockets-dev & libavformat-dev for debian >=9

--- a/tasks/set_facts.yml
+++ b/tasks/set_facts.yml
@@ -95,6 +95,8 @@
       - libvncserver-dev
       - libvorbis-dev
       - libwebp-dev
+      - libwebsockets-dev
+      - libavformat-dev
   when:
     - ansible_distribution == "Debian"
     - ansible_distribution_version is version('9', '>=')
