Permit guacamole install without guacd
guacd can be install on another machine as exemple

PS: it's a bug on the guacamole 1.5.4 and it's failing the compile

Workarround for this bug in 1.5.4 : https://lists.apache.org/thread/h5zql3zdov0ngh8kp9r3yppcprq5z1jf is to add on the `install | Configuring Guacamole Server Build` playbook tasks this :
```
  environment:
    LDFLAGS: '-lrt'
```

But i'm not sure if it's a good idea to add it for all version, ...

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,12 +3,14 @@
 - name: kill guacd # noqa no-changed-when
   ansible.builtin.command: pkill guacd
   become: true
+  when: guacd_config is defined
 
 - name: restart guacd
   ansible.builtin.service:
     name: guacd
     state: restarted
   become: true
+  when: guacd_config is defined
 
 - name: restart tomcat
   ansible.builtin.service:
