Update OpenID authentification
* guacamole-auth-openid is not existing anymore, the openid is now included in the sso plugin ( https://guacamole.apache.org/releases/1.5.5/ )
* add a exemple how-to enable OpenID authentification (in README.md)
* adapt code for the jar file of openid is not in the sso tar file
* make guacamole_openid['username-claim-type'] optional
* make guacamole_openid['groups-claim-type'] optional
* make guacamole_openid['allowed-clock-skew'] optional
* add guacamole_openid['scope'] attribut (optional)
* add guacamole_openid['max-token-validity'] (optional)
* add guacamole_openid['max-nonce-validity'] (optional)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,8 +18,8 @@ guacamole_auth_ldap_package: "{{ 'guacamole-auth-ldap-' + guacamole_version + '.
 # Authentication TOPT
 guacamole_auth_totp_package: "{{ 'guacamole-auth-totp-' + guacamole_version + '.tar.gz' }}"
 
-# Authentication OpenID
-guacamole_auth_openid_package: "{{ 'guacamole-auth-openid-' + guacamole_version + '.tar.gz' }}"
+# Authentication OpenID (via SSO)
+guacamole_auth_openid_package: "{{ 'guacamole-auth-sso-' + guacamole_version + '.tar.gz' }}"
 
 guacamole_openid_auth: false
 
